# winx

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: filter.md  index.md  lax.md  ndimage.md
docs/documentation/: filter.md  lax.md  ndimage.md
documentation/filter/: index.html
documentation/lax/: index.html
documentation/ndimage/: index.html
filter/: index.html
lax/: index.html
ndimage/: index.html
search/: search_index.json
src/kilroy/: __init__.py  _util.py  filter.py  lax.py  ndimage.py
src/kilroy/ndimage/: __init__.py  _gauss.py  _morphology.py  _ndimage.py
src/winx/: _neighbor.py  _types.py  filter.py  lax.py
src/winx/ndimage/: __init__.py  _gauss.py  _morphology.py  _ndimage.py
tests/: filter_window_test.py  ndimage_filters_test.py  ndimage_gauss_test.py  ndimage_generic_axes_test.py  ndimage_generic_test.py  ndimage_morpho_test.py  ndimage_test.py
